use unmodifiable EnumMap
This is better for printing stuff i.e. log messages and html render.